# KiTrack

./: CMakeLists.txt
include/KiTrack/: Automaton.h  SubsetHopfieldNN.h
include/marlin/: VerbosityLevels.h  logbuffer.h  loglevels.h  logscope.h  logstream.h
src/KiTrack/: Automaton.cc
src/marlin/: logstream.cc  prefix.cc
